# minidbg

./: CMakeLists.txt  README.md  help.txt
examples/: hello2.cpp  hello3.cpp  hello4.cpp  test_attach.cpp  test_hex.cpp  test_types.cpp
include/: breakpoint.hpp  colormod.h  debugger.hpp  dwarf_helpers.hpp  helpers.h  registers.hpp  symbols.hpp
src/: debugger.cpp  debugger1.cpp  debugger2.cpp  debugger3.cpp  helpers.cpp  minidbg.cpp  registers.cpp  symbols.cpp
